<resources>
    <string name="app_name">Health Care App</string>

    <string name="activity_title_sign_in">Sign In</string>
    <string name="activity_title_sign_up">Sign Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Unknown</string>
    <string name="nav_header_desc">Avatar</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_practice">Practice</string>
    <string name="menu_family">Family</string>

    <string name="steps">%1$d</string>
    <string name="steps1">Steps: %1$d</string>
    <string name="time">%1$s</string>
    <string name="speed">%1$d steps/min</string>
    <string name="distance">Distance: %1$f m</string>
    <string name="orientation">Orientation: %1$s</string>
</resources>