<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="zyot.shyn.healthcareapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_practice"
        android:name="zyot.shyn.healthcareapp.ui.practice.PracticeFragment"
        android:label="@string/menu_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/nav_report"
        android:name="zyot.shyn.healthcareapp.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_family"
        android:name="zyot.shyn.healthcareapp.ui.family.FamilyFragment"
        android:label="@string/menu_family"
        tools:layout="@layout/fragment_family" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="zyot.shyn.healthcareapp.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>